--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,7 @@
 }
  */
 /* Exercise4 */
-#arialfont{
+/* #arialfont{
     font-family: Arial, Helvetica, sans-serif;
 }
 blockquote{
@@ -66,4 +66,17 @@ blockquote footer{
     font-family: sans-serif;
     font-style: bold;
     font-size: 10px;
+} */
+
+
+/* Exercise 5 */
+
+article h2{
+    text-align:center;
+}
+article p{
+    line-height: 4px;
+}
+.important{
+    text-decoration: underline;
 }
