--- a/CSS/style.css
+++ b/CSS/style.css
@@ -212,7 +212,7 @@ p{
  */
 
  /* Exercise10 */
-
+/* 
  #div1{
     display: inline;
     background-color: lightblue;
@@ -229,4 +229,43 @@ p{
     display: block;
     width: 100vw;
     background-color: yellow;
+ } */
+
+
+ /* Exercise Eleven */
+ body{
+    background-color: gray;
  }
+ .feature-section{
+ background-color: lightpink;
+ background-image: url("https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2hvZXN8ZW58MHx8MHx8fDA%3D");
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover;
+ width: 300px;
+ height: 300px;
+ border-radius: 10px;
+
+
+}
+
+.feature-section h2{
+    text-align: center;
+    font-weight: bold;
+}
+.feature-section p{
+    text-align: center;
+    color: blue;
+    font-size: 10px;
+    font-weight: bold;
+
+}
+.feature-section img{
+    width: 80px;
+    height: 80px;
+    margin-top: 50%;
+    margin-left: 30%;
+    border-radius: 50px;
+    
+ 
+}
