--- a/CSS/style.css
+++ b/CSS/style.css
@@ -233,7 +233,7 @@ p{
 
 
  /* Exercise Eleven */
- body{
+ /* body{
     background-color: gray;
  }
  .feature-section{
@@ -268,4 +268,87 @@ p{
     border-radius: 50px;
     
  
+} */
+
+
+/* Exercise Tweleve */
+/* .profile-card{
+    position: relative;
+    width: 300px;
+    height: 200px;
+
+}
+.profile-image{
+    width: 100%;
+    height: auto;
+}
+
+.user-info{
+    position:absolute;
+    background-color: pink;
+    font-weight: bold;
+     border-radius: 15px;
+    padding: 5px 10px;
+    height: auto;
+    
+} */
+
+
+/* .promo-container {
+    position: relative;
+  width: 300px;
+  height: 20px;
+}
+.promo-image {
+  width: 100%;
+  height: 100%;
+ 
+}
+.promo-badge {
+    top: 830px;
+    position: absolute;
+  background: lightslategray;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  width: 500px;
+  right: -250px;
+  text-align: center;
+  padding: 10px;;
+
+} */
+
+
+.promo-container {
+  position: relative;
+  width: 300px;
+  height: 350px; /* big enough for the image */
+  border-radius: 10px;
+  overflow: hidden; /* hides edges like rounded corners */
+}
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+}
+
+.promo-badge {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+
+  background: rgba(0, 0, 0, 0.5); /* transparent black overlay */
+  color: white;
+  padding: 20px 0;
+}
+.user-name {
+  font-size: 20px;
+  font-weight: bold;
+}
+.user-title {
+  font-size: 14px;
 }
