--- a/CSS/style.css
+++ b/CSS/style.css
@@ -392,7 +392,7 @@ Execise Fourteen
 } */
 
 /* Execise sixsteen */
-
+/* 
 .media-player{
     display: flex;
 }
@@ -405,4 +405,48 @@ Execise Fourteen
 }
 .play{
 flex: 2;
+} */
+
+/*Exercise17 */
+
+/* body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+} */
+
+
+.main-container{
+    display: flex;
+    flex: 1;
+    /* background-color: rgb(188, 158, 119); */
+    border: 1px solid black;
+    width: 90vw;
+    height: 70vh;
+    justify-content: center;
+    
+   
+}
+
+
+
+.img-section img{
+    width: 300px;
+    height: 350px;
+    padding: 10px;
+}
+.buttons{
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    padding: 15px;
+}
+.btn{
+    background-color: blue;
+    color: white;
+    width: 100px;
+    height: 35px;
+    border-radius: 5px;
 }
