--- a/CSS/style.css
+++ b/CSS/style.css
@@ -452,6 +452,7 @@ flex: 2;
 } */
 
 /* Exercise Eighteen */
+/* 
 .nav-bar{
     background-color: rgb(112, 113, 84);
     height: 60px;  
@@ -542,4 +543,19 @@ body{
     position: sticky;
     bottom: 0;
     color: white;
+} */
+
+.container{
+
+  
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 1fr 1fr;
+   gap: 10px;
+   
+}
+.boxes{
+    background-color: blue;
+    padding: 20px;
+   
 }
